package model.entidades;

public class Npc {
}
